<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">DONT Disturb Profile Switcher</string>

	<string name="app_descrip">An automatic profile switcher, profile could be switched on specified time. Or active profile for a short while. </string>
	<string name="app_credits">"Any problem or suggestion please send to
		jingnan.si@gmail.com."</string>

	<string name="title_profiles">Profiles</string>
	<string name="title_schedules">Schedules</string>
	<string name="current_profile">Current Active Profile:</string>

	<string name="version_code">1</string>
	<string name="version_name">1.0</string>

	<string name="wifi">WIFI</string>
	<string name="gps">GPS</string>
	<string name="bluetooth">BlueTooth</string>
	<string name="mute">Mute</string>
	<string name="vibrate">Vibrate</string>
	<string name="devices">Devices</string>
	<string name="ringtone_and_volume">Ring Tone and Volume</string>
	<string name="phone">Phone</string>
	<string name="notification">Notification</string>
	<string name="email">Email</string>
	<string name="alarm">Alarm</string>
	<string name="volume">Volume</string>
	<string name="ringtone">Ring Tone</string>
	<string name="vibrate">Vibrate</string>
	<string name="name">Name:</string>
	<string name="default_ringtone">Default</string>
	<string name="empty_name_is_not_allowed">Empty name is not allowed!</string>
	<string name="update_exist">Update</string>
	<string name="save_current">Save</string>
	<string name="same_name_existing">There an existing profile with same name. Please choose the next action</string>
	<string name="empty_profiles_message">
		"You don't have any profiles to display.\n\nTo add profile, press
		<font fgcolor="#ffffffff">
			<b>Menu</b>
		</font>
		and touch:\n
		\n
		<li>
			<font fgcolor="#ffffffff">
				<b>Add</b>
			</font>
			to create a new profile from scratch\n
		</li>
		\n
		<li>
			<font fgcolor="#ffffffff">
				<b>Import/Export</b>
			</font>
			\n
		</li>
		"
	</string>
	<string name="empty_schedules_message">
		"You don't have any schedules to display.\n\nTo add schedule, press
		<font fgcolor="#ffffffff">
			<b>Menu</b>
		</font>
		and touch:\n
		\n
		<li>
			<font fgcolor="#ffffffff">
				<b>Add</b>
			</font>
			to create a new schedule from scratch\n
		</li>
		\n
		<li>
			<font fgcolor="#ffffffff">
				<b>Import/Export</b>
			</font>
			\n
		</li>
		"
	</string>
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="disable_confirm">Disable the selected profile?</string>
	<string name="enable_profile">Enable Profile</string>
	<string name="enable_profile_time">Enable With Expire Time</string>
	<string name="hour">Hour(s)</string>
	<string name="minute">Minute(s)</string>
	<string name="expire_time_is_not_valid">Inputed expire time is not valid</string>
	<string name="profile_expire_template">Expire in {0}</string>
	<string name="single_hour">Hour</string>
	<string name="single_minute">Minute</string>
	<string name="single_second">Second</string>
	<string name="multi_hour">Hours</string>
	<string name="multi_minute">Minutes</string>
	<string name="multi_second">Seconds</string>
	<string name="label_time">Time</string>
	<string name="label_profile">Profile</string>
	<string name="label_repeat">Repeat</string>
	<string name="label_schedule_label">Label</string>
	<string name="label_location">Location</string>
	<string name="label_latitude">Latitude</string>
	<string name="label_longitude">Longitude</string>
	<string name="label_altitude">Altitude</string>
	<string name="label_use_altitude">Use Altitude</string>
	<string name="label_use_current_loc">Use Current Location</string>
	<string name="invalid_location_template">Invalid {0} or {1}</string>
	<string name="invalid_location_template_2">Invalid {0} , {1} or {2}</string>
	<string name="warn_no_loc_providers">No location providers found, enable at least one to use location function!</string>
	<string name="warn_no_profile">No profile defined,create one to use with schedule!</string>
	<string name="no_time_and_loc_set">Configure one of Time and Location or both to schedule the profile enabling</string>
	<string name="no_repeat_and_time_in_past">The time is in the past and no repeat is configured!</string>
	<string name="no_profile_select">No profile selected for schedule</string>
	<string name="label_use">Using</string>
	<string name="phone_data_conn">Mobile Data Network</string>
	<string name="notification_enable_profile_title">Profile</string>
	<string name="notification_enable_profile">{1} {2} enable profile {0}!</string>
	<string name="notification_enable_profile_title"></string>
	<string name="notification_enable_profile_fail">{1} failed to {2} enable profile {0}!</string>
	<string name="schedule">Schedule</string>
	<string name="automatically">automatically</string>
	<string name="manually">manually</string>
</resources>
