<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">

		<TableLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:stretchColumns="0">
			<TableRow android:id="@+id/tr_time" android:clickable="true" android:background="@drawable/list_item_bg">
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:orientation="vertical"
					android:layout_margin="5dip">
					<TextView android:layout_width="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:layout_gravity="center_vertical"
						android:layout_height="fill_parent" android:text="@string/label_time" />
					<TextView android:id="@+id/time_desc"
						android:layout_width="wrap_content" android:layout_height="fill_parent"
						android:textAppearance="?android:attr/textAppearanceSmall" />
				</LinearLayout>
			</TableRow>

			<TableRow android:id="@+id/tr_profile" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:clickable="true" android:background="@drawable/list_item_bg">
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:orientation="vertical"
					android:layout_margin="5dip">
					<TextView android:layout_width="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:layout_height="fill_parent" android:text="@string/label_profile" />
					<TextView android:id="@+id/profile_desc"
						android:layout_width="wrap_content" android:layout_height="fill_parent"
						android:textAppearance="?android:attr/textAppearanceSmall" />
				</LinearLayout>
				<ImageButton android:layout_width="wrap_content"
					android:id="@+id/img_btn_profile" android:layout_height="wrap_content"
					android:layout_marginRight="4dip" android:layout_gravity="center_vertical"
					android:background="@drawable/btn_circle" android:src="@drawable/ic_btn_round_more" />
			</TableRow>

			<TableRow android:id="@+id/tr_repeat" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:clickable="true" android:background="@drawable/list_item_bg">
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:orientation="vertical"
					android:layout_margin="5dip">
					<TextView android:layout_width="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:layout_marginLeft="5dip" android:layout_gravity="center_vertical"
						android:layout_height="fill_parent" android:text="@string/label_repeat" />
					<TextView android:id="@+id/repeat_desc"
						android:layout_width="wrap_content" android:layout_height="fill_parent"
						android:textAppearance="?android:attr/textAppearanceSmall" />
				</LinearLayout>
				<ImageButton android:layout_width="wrap_content"
					android:id="@+id/img_btn_repeat" android:layout_height="wrap_content"
					android:layout_marginRight="4dip" android:layout_gravity="center_vertical"
					android:background="@drawable/btn_circle" android:src="@drawable/ic_btn_round_more" />
			</TableRow>

			<TableRow android:id="@+id/tr_location" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:clickable="true" android:background="@drawable/list_item_bg">
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:orientation="vertical"
					android:layout_margin="5dip">
					<TextView android:layout_width="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:layout_height="fill_parent" android:text="@string/label_location" />
					<TextView android:id="@+id/location_desc"
						android:layout_width="wrap_content" android:layout_height="fill_parent"
						android:textAppearance="?android:attr/textAppearanceSmall" />
				</LinearLayout>
				<ImageButton android:layout_width="wrap_content"
					android:id="@+id/img_btn_location" android:layout_height="wrap_content"
					android:layout_marginRight="4dip" android:layout_gravity="center_vertical"
					android:background="@drawable/btn_circle" android:src="@drawable/ic_btn_round_more" />
			</TableRow>

			<TableRow android:id="@+id/tr_schedule_label" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:clickable="true" android:background="@drawable/list_item_bg">
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:orientation="vertical"
					android:layout_margin="5dip">
					<TextView android:layout_width="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:layout_height="fill_parent" android:text="@string/label_schedule_label" />
					<TextView android:id="@+id/schedule_label"
						android:layout_width="wrap_content" android:layout_height="fill_parent"
						android:textAppearance="?android:attr/textAppearanceSmall" />
				</LinearLayout>
				<ImageButton android:layout_width="wrap_content"
					android:id="@+id/img_btn_schedule_label" android:layout_height="wrap_content"
					android:layout_marginRight="4dip" android:layout_gravity="center_vertical"
					android:background="@drawable/btn_circle" android:src="@drawable/ic_btn_round_more" />
			</TableRow>
		</TableLayout>
	</LinearLayout>
</ScrollView>
